fixing extra horizontal scrollbar in sidebar

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -108,10 +108,6 @@ body {
         max-height: 100%;
     }
 
-    .content-with-sidebar .sidebar .sidebar-content {
-        width: 270px;
-    }
-
     .content-with-sidebar .right-of-sidebar {
         width: calc(100% - 290px);
     }
